<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/ll_activity">

    <include layout="@layout/layout_titlebar" />

    <View style="@style/limit_line" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingEnd="20dp"
        android:paddingStart="20dp">

        <TextView
            android:id="@+id/accepts_switch_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/accepts_switch"
            android:textColor="@color/plugin_camera_black" />

        <com.kyleduo.switchbutton.SwitchButton
            android:id="@+id/accepts_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            app:kswAnimationDuration="300"
            app:kswBackDrawable="@drawable/ios_back_drawable"
            app:kswThumbDrawable="@drawable/ios_thumb_selector"
            app:kswThumbMarginBottom="-8dp"
            app:kswThumbMarginLeft="-5dp"
            app:kswThumbMarginRight="-5dp"
            app:kswThumbMarginTop="-2.5dp"
            app:kswThumbRangeRatio="1.4" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/limit_line1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingEnd="20dp"
        android:paddingStart="20dp">

        <TextView
            android:id="@+id/accept_account_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/accept_account"
            android:textColor="@color/plugin_camera_black" />

        <EditText
            android:id="@+id/accept_account"
            android:layout_width="@dimen/dp_50"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:gravity="right"
            android:inputType="number"
            android:lines="1"
            android:textColor="#000000"
            android:textColorHint="@color/line" />

    </RelativeLayout>

    <View style="@style/limit_line" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingEnd="20dp"
        android:paddingStart="20dp">

        <TextView
            android:id="@+id/consult_price_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/consult_price"
            android:textColor="@color/plugin_camera_black" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/consult_price"
                android:layout_width="@dimen/dp_50"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="right"
                android:inputType="number|numberDecimal"
                android:lines="1"
                android:textColor="#000000"
                android:textColorHint="@color/line" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="元"
                android:textColor="@color/plugin_camera_black" />
        </LinearLayout>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/limit_line1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingEnd="20dp"
        android:paddingStart="20dp">

        <TextView
            android:id="@+id/consult_discount_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/consult_discount"
            android:textColor="@color/plugin_camera_black" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/consult_discount"
                android:layout_width="@dimen/dp_50"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="right"
                android:inputType="number|numberDecimal"
                android:lines="1"
                android:textColor="#000000"
                android:textColorHint="@color/line" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="元"
                android:textColor="@color/plugin_camera_black" />
        </LinearLayout>
    </RelativeLayout>

    <View style="@style/limit_line" />

    <TextView
        android:id="@+id/tv_price_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:text=""
        android:textColor="@color/plugin_camera_black" />


    <TextView
        android:id="@+id/save"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_shape"
        android:gravity="center"
        android:text="@string/save"
        android:textColor="@color/white" />
</LinearLayout>
