<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/ll_activity">

    <include layout="@layout/layout_titlebar" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F3F3F3"
            android:orientation="vertical">

            <View style="@style/limit_line" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:paddingEnd="20dp"
                android:paddingStart="20dp">

                <TextView
                    android:id="@+id/accepts_switch_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/accepts_switch"
                    android:textColor="@color/plugin_camera_black" />

                <com.kyleduo.switchbutton.SwitchButton
                    android:id="@+id/accepts_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    app:kswAnimationDuration="300"
                    app:kswBackDrawable="@drawable/ios_back_drawable"
                    app:kswThumbDrawable="@drawable/ios_thumb_selector"
                    app:kswThumbMarginBottom="-8dp"
                    app:kswThumbMarginLeft="-5dp"
                    app:kswThumbMarginRight="-5dp"
                    app:kswThumbMarginTop="-2.5dp"
                    app:kswThumbRangeRatio="1.4" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/limit_line1" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:paddingEnd="20dp"
                android:paddingStart="20dp">

                <TextView
                    android:id="@+id/accept_account_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/diagnse_number"
                    android:textColor="@color/plugin_camera_black" />

                <EditText
                    android:id="@+id/accept_account"
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:gravity="right"
                    android:inputType="number"
                    android:lines="1"
                    android:textColor="#000000"
                    android:textColorHint="@color/line" />

            </RelativeLayout>

            <View style="@style/limit_line" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:paddingEnd="20dp"
                android:paddingStart="20dp">

                <TextView
                    android:id="@+id/consult_price_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/diagnse_price"
                    android:textColor="@color/plugin_camera_black" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/consult_price"
                        android:layout_width="@dimen/dp_50"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:gravity="right"
                        android:inputType="number|numberDecimal"
                        android:lines="1"
                        android:textColor="#000000"
                        android:textColorHint="@color/line" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="元"
                        android:textColor="@color/plugin_camera_black" />
                </LinearLayout>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/limit_line1" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:paddingEnd="20dp"
                android:paddingStart="20dp">

                <TextView
                    android:id="@+id/consult_discount_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/diagnse__discount_price"
                    android:textColor="@color/plugin_camera_black" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/consult_discount"
                        android:layout_width="@dimen/dp_50"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:gravity="right"
                        android:inputType="number|numberDecimal"
                        android:lines="1"
                        android:textColor="#000000"
                        android:textColorHint="@color/line" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="元"
                        android:textColor="@color/plugin_camera_black" />
                </LinearLayout>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/limit_line1" />

            <LinearLayout
                android:id="@+id/symptoms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingBottom="@dimen/dp_10">

                <com.newdjk.doctor.views.ItemView
                    android:id="@+id/mFunReport"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_30"

                    app:RightTVText="编辑"
                    app:SetRightImg="@drawable/ic_right"
                    app:leftTVText="适应病症"
                    app:leftTVTextDrawLeftImg="@mipmap/me_service" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_1"
                    android:layout_marginTop="@dimen/dp_10"
                    android:background="@color/limit_line1" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyleview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_10"
                    android:layout_marginTop="@dimen/dp_10" />


            </LinearLayout>

            <View style="@style/limit_line" />

            <TextView
                android:id="@+id/tv_price_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:text=""
                android:textColor="@color/plugin_camera_black" />

            <TextView
                android:id="@+id/save"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/dp_50"
                android:layout_marginTop="50dp"
                android:background="@drawable/button_shape"
                android:gravity="center"
                android:text="@string/save"
                android:textColor="@color/white" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>